--- a/warm-up/index.html
+++ b/warm-up/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./programming-101.js"></script>
+    <script src="./star-patterns.js"></script>
     <style>
       body {
         box-sizing: border-box;
